--- a/preparation/tasks/main.yml
+++ b/preparation/tasks/main.yml
@@ -1,26 +1,59 @@
 ---
-- name: Run the equivalent of "apt-get update" as a separate step
-  apt: update_cache=yes cache_valid_time=84600
+# - name: Run the equivalent of "apt-get update" as a separate step
+#   apt: update_cache=yes cache_valid_time=84600
+#
+# - name: install git
+#   apt: name={{item}} state=present
+#   with_items:
+#      - git
+#      - python-dev
+#      - python-rpi.gpio
+#      - python-smbus
+#      - i2c-tools
+#      - python-pip
+#      - libffi-dev
+#      - g++
+#      - libssl-dev
+#      - python3-gpiozero
+#      - python-gpiozero
+#      - python3
+#      - python3-pip
+#      - libav-tools
+#
+# - name: download sourcecode
+#   git:  repo='http://github.com/adafruit/Adafruit-Raspberry-Pi-Python-Code.git' dest=/home/pi/Adafruit-Raspberry-Pi-Python-Code
+#
+# - name: testing I2C
+#   raw: sudo i2cdetect -y 1 && sudo i2cdetect -y 0
+#
+  # - name: install PIP
+  #   pip: name=avconv
+#   pip: name=https://pypi.python.org/packages/e6/90/43b5da15ffe873d51cd48c5c484f148efb62638b76eacfaf3ffdf83240dc/IMAPClient-1.0.2.tar.gz
 
-- name: install git
-  apt: name={{item}} state=present
+- name: create directory
+  file: path=/home/pi/{{item}}  state=directory mode=0755 owner=pi group=pi
   with_items:
-    - git
-    - python-dev
-    - python-rpi.gpio
-    - python-smbus
-    - i2c-tools
-    - python-pip
-    - libffi-dev
-    - g++
-    - libssl-dev
+    - button
+    - TrafficLights
+    - MusicBox
+    - MotionSensor
 
-
-- name: download sourcecode
-  git:  repo='http://github.com/adafruit/Adafruit-Raspberry-Pi-Python-Code.git' dest=/home/pi/Adafruit-Raspberry-Pi-Python-Code
-
-- name: testing I2C
-  raw: sudo i2cdetect -y 1 && sudo i2cdetect -y 0
-
-- name: install PIP
-  pip: name=https://pypi.python.org/packages/e6/90/43b5da15ffe873d51cd48c5c484f148efb62638b76eacfaf3ffdf83240dc/IMAPClient-1.0.2.tar.gz
+- name: testing led
+  template: src={{item}} dest=/home/pi/{{item}} mode=0755 owner=pi group=pi
+  with_items:
+    # - led.py
+    # - led02.py
+    # - led03.py
+    # - led04.py
+    # - button/button02.py
+    # - button/button03.py
+    # - button/button04.py
+    # - button/button05.py
+    # - button/button06.py
+    # - button/button07.py
+    # - button/button08.py
+    # - TrafficLights/tl01.py
+    # - TrafficLights/tl02.py
+    # - TrafficLights/tl03.py
+    # - MusicBox/mb01.py
+    - MotionSensor/ms01.py
